--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -314,7 +314,7 @@
 </section>
 
 
-<section class="kal">
+<section class="call">
   <div type="button round" class="callback-bt " data-toggle="modal" data-target="#exampleModal">
     <div class="text-call ">
       <i class="fa fa-phone"></i>
