--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -8,25 +8,25 @@
         <div class="container">
           <h3 class="ponts text-center">Миссия</h3>
           <hr>
-         <p class="font"> Миссия салона - предоставить клиентам высокий сервис обслуживания и широкий спектр услуг по самым
+         <p class="font text-center"> Миссия салона - предоставить клиентам высокий сервис обслуживания и широкий спектр услуг по самым
           демократичным ценам.</p>
         </div>
         <div class="container offset-md-1">
           <h3 class="ponts text-center">Политика</h3>
           <hr>
-          <p class="font"> Мы всегда готовы предложить своим любимым клиентам индивидуальный подход . </p>
+          <p class="font text-center"> Мы всегда готовы предложить своим любимым клиентам индивидуальный подход . </p>
         </div>
 
         <div class="container">
           <h3 class="ponts text-center"> Этикет</h3>
           <hr>
-          <p class="font"> Мы всегда рады приветствовать клиентов в нашей студии красоты. Мы с благодарностью относимся к выбору и
+          <p class="font text-center"> Мы всегда рады приветствовать клиентов в нашей студии красоты. Мы с благодарностью относимся к выбору и
             мнению клиентов о работе студии, Гордимся доверием наших клиентов!</p>
         </div>
         <div class="container offset-md-1">
           <h3 class="ponts text-center">Философия</h3>
           <hr>
-          <p class="font" > Видение и внутреннее правило нашей компании заключается в том что «Возможно - Все!»</p class="font" >
+          <p class="font text-center" > Видение и внутреннее правило нашей компании заключается в том что «Возможно - Все!»</p class="font" >
         </div>
         <p class="font text-center">Добро пожаловать...</p>
 
