--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %} {% block content %}
 <section id="section-about" class="section-common ">
+  <h2 class="featurette-heading text-center">О нас</h2>
   <div class="container">
     <div class="row featurette">
       <div class="col-md-6 order-md-2 wow zoomIn " data-wow-delay="0.1s">
-        <h2 class="featurette-heading text-center">О нас</h2>
+        
 
         <div class="container">
           <h3 class="ponts text-center">Миссия</h3>
@@ -11,7 +12,7 @@
          <p class="font text-center"> Миссия салона - предоставить клиентам высокий сервис обслуживания и широкий спектр услуг по самым
           демократичным ценам.</p>
         </div>
-        <div class="container offset-md-1">
+        <div class="container ">
           <h3 class="ponts text-center">Политика</h3>
           <hr>
           <p class="font text-center"> Мы всегда готовы предложить своим любимым клиентам индивидуальный подход . </p>
@@ -23,7 +24,7 @@
           <p class="font text-center"> Мы всегда рады приветствовать клиентов в нашей студии красоты. Мы с благодарностью относимся к выбору и
             мнению клиентов о работе студии, Гордимся доверием наших клиентов!</p>
         </div>
-        <div class="container offset-md-1">
+        <div class="container ">
           <h3 class="ponts text-center">Философия</h3>
           <hr>
           <p class="font text-center" > Видение и внутреннее правило нашей компании заключается в том что «Возможно - Все!»</p class="font" >
