--- a/app/templates/includes/main.html
+++ b/app/templates/includes/main.html
@@ -16,33 +16,33 @@
     <ul class="navbar-nav mr-auto ml-5">
       <li class="nav-item ">
         <a class="nav-link " href="#section-about">
-          <h5>О нас</h5>
+          О нас
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#section-services">
-          <h5>Услуги</h5>
+          Услуги
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#section-gallery">
-          <h5>Фотогалерея</h5>
+          Фотогалерея
         </a>
       </li>
 
       <li class="nav-item">
         <a class="nav-link" href="#section-prices">
-          <h5>Прайс</h5>
+          Прайс
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#mi">
-          <h5>Мастера</h5>
+          Мастера
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#section-contacts">
-          <h5>Контакты</h5>
+          Контакты
         </a>
       </li>
     </ul>
@@ -58,7 +58,7 @@
     </div>
     <div id="contacts" class="my-2">
       <a href="tel:{{ site_phone }}" title="Позвонить"
-        >{{ site_phone_formated }}<i class="fas fa-phone"> </i
+        >{{ site_phone_formated }} </i
       ></a>
     </div>
   </div>
