--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -2,41 +2,35 @@
 <section id="section-about" class="section-common ">
   <div class="container">
     <div class="row featurette">
-      <div class="col-md-6 order-md-2">
-        <h2 class="featurette-heading text-center">Прайс</h2>
-        <div class="container_about wow zoomIn ">
-        
+      <div class="col-md-6 order-md-2 wow zoomIn " data-wow-delay="0.1s">
+        <h2 class="featurette-heading text-center">О нас</h2>
 
         <div class="container">
-          <h3 class="ponts text-center">Миссия</h3>
-          
-         <p class="font text-center"> Миссия салона - предоставить клиентам высокий сервис обслуживания и широкий спектр услуг по самым
+          <h3>Миссия</h3>
+          Миссия салона - предоставить клиентам высокий сервис обслуживания и широкий спектр услуг по самым
           демократичным ценам.</p>
-        
-        <div class="container ">
-          <h3 class="ponts text-center">Политика</h3>
-          <hr>
-          <p class="font text-center"> Мы всегда готовы предложить своим любимым клиентам индивидуальный подход . </p>
+        </div>
+        <div class="container offset-md-1">
+          <h3 class="text-center">Политика</h3>
+          <p> Мы всегда готовы предложить своим любимым клиентам индивидуальный подход . </p>
         </div>
 
         <div class="container">
-          <h3 class="ponts text-center"> Этикет</h3>
-          
-          <p class="font text-center"> Мы всегда рады приветствовать клиентов в нашей студии красоты. Мы с благодарностью относимся к выбору и
+          <h3> Этикет</h3>
+          <p> Мы всегда рады приветствовать клиентов в нашей студии красоты. Мы с благодарностью относимся к выбору и
             мнению клиентов о работе студии, Гордимся доверием наших клиентов!</p>
         </div>
-        <div class="container ">
-          <h3 class="ponts text-center">Философия</h3>
-          
-          <p class="font text-center" > Видение и внутреннее правило нашей компании заключается в том что «Возможно - Все!»</p class="font" >
+        <div class="container offset-md-1">
+          <h3 class="text-center">Философия</h3>
+          <p> Видение и внутреннее правило нашей компании заключается в том что «Возможно - Все!»</p>
         </div>
-        <p class="font text-center">Добро пожаловать...</p>
+        <p class="text-center">Добро пожаловать...</p>
 
       </div>
-      <div class="col-md-6 ">
-        <div class="img   ">
-          <img class="img-fluid yslugi" width="500" height="400"
-            src="{{ url_for('static', filename='css/images/pr.jpg') }}" alt="">
+      <div class="col-md-6 wow zoomIn" data-wow-delay="0.1s">
+        <div class="img  ">
+          <img class="img-fluid onas" width="500" height="400"
+            src="{{ url_for('static', filename='css/images/bbb.jpg') }}" alt="">
         </div>
         <title>Placeholder</title>
         <rect fill="#eee" width="100%" height="100%" />
