--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -30,7 +30,7 @@
       <div class="col-md-6 wow zoomIn" data-wow-delay="0.1s">
         <div class="img  ">
           <img class="img-fluid onas" width="500" height="400"
-            src="{{ url_for('static', filename='css/images/bbb.jpg') }}" alt="">
+            src="{{ url_for('static', filename='css/images/on.jpg') }}" alt="">
         </div>
         <title>Placeholder</title>
         <rect fill="#eee" width="100%" height="100%" />
