--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %} {% block content %}
 <section id="section-about" class="section-common ">
+  <h2 class="featurette-heading text-center">О нас</h2>
   <div class="container">
     <div class="row featurette">
       <div class="col-md-6 order-md-2 wow zoomIn " data-wow-delay="0.1s">
-        <h2 class="featurette-heading text-center">О нас</h2>
+        
 
         <div class="container">
           <h3>Миссия</h3>
@@ -30,7 +31,7 @@
       <div class="col-md-6 wow zoomIn" data-wow-delay="0.1s">
         <div class="img  ">
           <img class="img-fluid onas" width="500" height="400"
-            src="{{ url_for('static', filename='css/images/on.jpg') }}" alt="">
+            src="{{ url_for('static', filename='css/images/bbb.jpg') }}" alt="">
         </div>
         <title>Placeholder</title>
         <rect fill="#eee" width="100%" height="100%" />
