--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -7,23 +7,23 @@
         
 
         <div class="container">
-          <h3>Миссия</h3>
+          <h3 class="text-center">Миссия</h3>
           Миссия салона - предоставить клиентам высокий сервис обслуживания и широкий спектр услуг по самым
           демократичным ценам.</p>
         </div>
-        <div class="container offset-md-1">
+        <div class="container ">
           <h3 class="text-center">Политика</h3>
-          <p> Мы всегда готовы предложить своим любимым клиентам индивидуальный подход . </p>
+          <p class="text-center"> Мы всегда готовы предложить своим любимым клиентам индивидуальный подход . </p>
         </div>
 
         <div class="container">
-          <h3> Этикет</h3>
-          <p> Мы всегда рады приветствовать клиентов в нашей студии красоты. Мы с благодарностью относимся к выбору и
+          <h3 class="text-center"> Этикет</h3>
+          <p class="text-center"> Мы всегда рады приветствовать клиентов в нашей студии красоты. Мы с благодарностью относимся к выбору и
             мнению клиентов о работе студии, Гордимся доверием наших клиентов!</p>
         </div>
-        <div class="container offset-md-1">
+        <div class="container ">
           <h3 class="text-center">Философия</h3>
-          <p> Видение и внутреннее правило нашей компании заключается в том что «Возможно - Все!»</p>
+          <p class="text-center"> Видение и внутреннее правило нашей компании заключается в том что «Возможно - Все!»</p>
         </div>
         <p class="text-center">Добро пожаловать...</p>
 
@@ -143,7 +143,7 @@
                 Корекция/укрепление твердым гелем <br>
                 800р.<br>
                 Корекция/укрепление гель-лаком <br>
-                700р.</p><br>
+                700р.</pclass="text-center"><br>
             </li>
             <li>
               <input type="checkbox" checked>
