--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -28,6 +28,9 @@ h5 {
 #main-nav #contacts a:hover {
   text-decoration: none;
 }
+.nav-item {
+  font-size: 32px;
+}
 .nav-item:hover {
   opacity: 0.6;
   transform: scale(1.2);
