--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -33,9 +33,9 @@ h5 {
   color: black;
   font-weight: 300;
 }
-.navbar-nav .nav-link {
+.navbar-light .navbar-nav .nav-link {
   color: black;
-  font-weight: 300;
+  font-weight: 600;
 }
 .nav-item:hover {
   opacity: 0.6;
